# tensoric

./: .gitignore  APPLICATIONS.md  BIG_O.md  README.md  WALKTHROUGH.md  pyproject.toml  test_logs_steps_10.txt  test_logs_steps_100.txt  test_logs_steps_200.txt
.github/: FUNDING.yml
Interaction-Calculus/: jax_evaluator.py  lisp_to_ic.py  parse_test.py  repl.py  run_tests.py  show.py  staticic.py  test_compiler.py  test_jax.py  test_logs.txt  test_logs_steps_100.txt  test_vect.py  vectorized.py
Interaction-Calculus/examples/: bool.lisp
docs/: FPGA_PROTOTYPE.md  HARDWARE_VISION.md  NUMERICS_ARCHITECTURE.md  interaction_net_reduction_tutorial.md  interaction_net_reduction_tutorial_part2.md
examples/: math.lisp
ref_impl/: README.md
research/emu/: os_emulator.py  test_emu.py
scripts/: repl.sh  test.sh
tensoric/: jax_gc_research.py  lisp_compiler.py  lisp_parser.py  parser.py  repl.py  vectorized.py
tensoric.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tensoric/base/: continuous_jax_ic.py  ic_ast.py  jax_evaluator.py  parser.py  show.py  vectorized.py
tensoric/delta/: delta_lisp_compiler.py  delta_vectorized.py
tensoric/emu/: os_emulator.py
tensoric/lc/: ast.py  compiler.py
tensoric/lisp/: lisp_compiler.py  lisp_to_ic.py
tensoric/page/: uint8_paged_ic.py
tensoric/research/: delta_ic.py  delta_lisp_compiler.py  uint8_relative.py
tests/: parse_test.py  run_tests.py  test_compiler.py  test_delta_nets.py  test_jax.py  test_logs_steps_10.txt  test_logs_steps_1000.txt  test_logs_steps_10000.txt  test_logs_steps_200.txt  test_repl.py  test_vect.py
