[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensoric"
version = "0.1.0"
description = "Interaction Calculus on Accelerators using JAX"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Raden Muaz", email = "radenmuaz@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax",
    "jaxlib",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/radenmuaz/tensoric"

[tool.setuptools]
packages = ["tensoric"]
